sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:3: error: ')' expected but ',' found.
  for(i<-getValueCount()-2,0){
                          ^AlgBubbleSort2:10: error: illegal start of simple expression
} 
^